<resources>
    <string name="app_name">Prix Finance</string>
    <string name="txt_dashBoard">Dashboard</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_budgetManagement">Budget Management</string>
    <string name="txt_transactions">Transactions</string>
    <string name="txt_financialOverview">Financial Overview</string>
    <string name="txt_goals">Goals</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logOut">Logout</string>
    <string name="txt_greeting">Hello, User!</string>
    <string name="tgl_open">Open</string>
    <string name="tgl_close">Close</string>
    <string name="btn_getStarted">Get Started</string>
    <string name="txt_AppDesc">Keeping Your Finances on Track</string>
    <string name="txt_toolbarDesc">App Toolbar</string>
    <string name="txt_imageDesc">App Logo</string>
    <string name="txt_totBal">Total Balance</string>
    <string name="txt_Currency">R</string>
    <string name="output_NetBalance">2309.02</string>
    <string name="txt_budgets">Budgets</string>
    <string name="txt_addBudgets">+</string>
    <string name="txt_budgetName">Food</string>
    <string name="txt_statusOnTrack">On Track</string>
    <string name="txt_statusCaution">Caution</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>