<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drwLayoutDashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/bg_night"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarDashboard"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/txt_toolbarDesc"
            android:elevation="4dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt_dashBoard"
                android:textAlignment="center"
                android:layout_marginEnd="200dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_imageDesc"
                android:src="@drawable/prix_logo"
                tools:layout_editor_absoluteX="344dp"></com.google.android.material.imageview.ShapeableImageView>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/lblGreetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/txt_greeting"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/toolBarDashboard"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_search"
            android:focusable="false"
            app:closeIcon="@drawable/ic_closesearch"
            app:iconifiedByDefault="false"
            app:queryHint="Search here"
            app:searchIcon="@drawable/ic_opensearch"
            android:layout_marginTop="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/lblGreetingMessage">

        </androidx.appcompat.widget.SearchView>

        <RelativeLayout
            android:id="@+id/linearBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_total"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/searchbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/txt_totBal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="45.5dp"
                android:text="@string/txt_Currency"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/outputNetBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="54dp"
                android:text="@string/output_NetBalance"
                android:textSize="47sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lblBudgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_budgets"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            android:layout_marginTop="35dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/linearBox"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnAddBudget"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_addbudget"
            android:text="@string/txt_addBudgets"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="215dp"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toEndOf="@id/lblBudgets"
            app:layout_constraintTop_toBottomOf="@id/linearBox"/>

        <LinearLayout
            android:id="@+id/linearBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/lblBudgets">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewBudgetDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/floatingitem">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>